✨ test(RowUtilTest): expand test coverage for utility methods